Finished country sales query

--- a/chinook/SQL Queries for Record Sales.ipynb
+++ b/chinook/SQL Queries for Record Sales.ipynb
@@ -533,20 +533,29 @@
     "- average value of sales per customer\n",
     "- average order value\n",
     "\n",
-    "These values will be coming from the invoice table.\n",
+    "These values will be coming from the invoice and customer tables.\n",
     "\n",
-    "Specifically of interest from the invoice table will be the columns\n",
+    "Total number of customers per country:  \n",
+    "COUNT(customer_id) GROUP BY country, from customer table\n",
     "\n",
-    "- total (The value of each sale)\n",
-    "- customer_id\n",
-    "- country\n",
+    "Total value of Sales:  \n",
+    "SUM(totals) GROUP BY billing_country, from invoice table\n",
+    "\n",
+    "AVERAGE value of sales per customer:  \n",
+    "Total Sales value divided by number of customers\n",
+    "\n",
+    "Number of orders by country:  \n",
+    "COUNT (invoice_id) GROUP BY country\n",
+    "\n",
+    "Average order value:  \n",
+    "Total sales value divided by number of orders\n",
     "\n",
     "I will select the total value of sales grouped by customer id as a subquery, then \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -554,44 +563,155 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///chinook.db\n",
-      "(sqlite3.OperationalError) near \"country_total\": syntax error\n",
-      "[SQL: WITH customer_total AS (\n",
-      "SELECT customer_id, \n",
-      "       SUM(total) customer_total,\n",
-      "       billing_country country\n",
-      "FROM invoice\n",
-      "GROUP BY 1),\n",
-      "\n",
-      "WITH country_total AS (\n",
-      "SELECT billing_country country,\n",
-      "       SUM(total) country_total,\n",
-      "       COUNT(customer_id) number_of_customers\n",
-      "FROM \n",
-      "GROUP BY 1)]\n",
-      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>country</th>\n",
+       "        <th>num_customers</th>\n",
+       "        <th>total_sales</th>\n",
+       "        <th>avg_customer_sale</th>\n",
+       "        <th>average_sale</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>USA</td>\n",
+       "        <td>13</td>\n",
+       "        <td>1040.49</td>\n",
+       "        <td>80.04</td>\n",
+       "        <td>7.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Canada</td>\n",
+       "        <td>8</td>\n",
+       "        <td>535.59</td>\n",
+       "        <td>66.95</td>\n",
+       "        <td>7.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Brazil</td>\n",
+       "        <td>5</td>\n",
+       "        <td>427.68</td>\n",
+       "        <td>85.54</td>\n",
+       "        <td>7.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>France</td>\n",
+       "        <td>5</td>\n",
+       "        <td>389.07</td>\n",
+       "        <td>77.81</td>\n",
+       "        <td>7.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Germany</td>\n",
+       "        <td>4</td>\n",
+       "        <td>334.62</td>\n",
+       "        <td>83.66</td>\n",
+       "        <td>8.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Czech Republic</td>\n",
+       "        <td>2</td>\n",
+       "        <td>273.24</td>\n",
+       "        <td>136.62</td>\n",
+       "        <td>9.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>United Kingdom</td>\n",
+       "        <td>3</td>\n",
+       "        <td>245.52</td>\n",
+       "        <td>81.84</td>\n",
+       "        <td>8.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Portugal</td>\n",
+       "        <td>2</td>\n",
+       "        <td>185.13</td>\n",
+       "        <td>92.57</td>\n",
+       "        <td>6.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>India</td>\n",
+       "        <td>2</td>\n",
+       "        <td>183.15</td>\n",
+       "        <td>91.58</td>\n",
+       "        <td>8.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Other</td>\n",
+       "        <td>15</td>\n",
+       "        <td>1094.94</td>\n",
+       "        <td>73.00</td>\n",
+       "        <td>7.45</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('USA', 13, 1040.49, '80.04', '7.94'),\n",
+       " ('Canada', 8, 535.59, '66.95', '7.05'),\n",
+       " ('Brazil', 5, 427.68, '85.54', '7.01'),\n",
+       " ('France', 5, 389.07, '77.81', '7.78'),\n",
+       " ('Germany', 4, 334.62, '83.66', '8.16'),\n",
+       " ('Czech Republic', 2, 273.24, '136.62', '9.11'),\n",
+       " ('United Kingdom', 3, 245.52, '81.84', '8.77'),\n",
+       " ('Portugal', 2, 185.13, '92.57', '6.38'),\n",
+       " ('India', 2, 183.15, '91.58', '8.72'),\n",
+       " ('Other', 15, 1094.94, '73.00', '7.45')]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "WITH customer_total AS (\n",
-    "SELECT customer_id, \n",
-    "       SUM(total) customer_total,\n",
-    "       billing_country country\n",
+    "WITH customer_country AS (\n",
+    "SELECT COUNT(customer_id) num_customers,\n",
+    "       country\n",
+    "FROM customer\n",
+    "GROUP BY 2),\n",
+    "\n",
+    "country_total AS (\n",
+    "SELECT billing_country country,\n",
+    "       SUM(total) total_sales,\n",
+    "       COUNT(invoice_id) number_of_sales\n",
     "FROM invoice\n",
     "GROUP BY 1),\n",
     "\n",
-    "WITH country_total AS (\n",
-    "SELECT billing_country country,\n",
-    "       SUM(total) country_total,\n",
-    "       COUNT(customer_id) number_of_customers\n",
-    "FROM \n",
-    "GROUP BY 1)"
+    "country_values AS (\n",
+    "SELECT CASE\n",
+    "          WHEN cc.num_customers = 1 THEN 'Other'\n",
+    "          ELSE cc.country\n",
+    "       END country_choice,\n",
+    "       SUM(cc.num_customers) num_customers,\n",
+    "       SUM(ct.total_sales) total_sales,\n",
+    "       SUM(ct.number_of_sales) number_of_sales,\n",
+    "       CASE\n",
+    "         WHEN cc.num_customers = 1 THEN 1\n",
+    "         ELSE 0\n",
+    "       END is_other\n",
+    "FROM customer_country cc\n",
+    "INNER JOIN country_total ct\n",
+    "ON cc.country = ct.country\n",
+    "GROUP BY country_choice)\n",
+    "\n",
+    "SELECT country_choice country,\n",
+    "       num_customers,\n",
+    "       ROUND(total_sales,2) total_sales,\n",
+    "       PRINTF('%.2f',(total_sales / num_customers)) avg_customer_sale,\n",
+    "       PRINTF('%.2f', (total_sales / number_of_sales)) average_sale\n",
+    "FROM country_values\n",
+    "ORDER BY is_other ASC,\n",
+    "         total_sales DESC;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +1090,7 @@
        " (59, 71.28, 'India')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1275,7 @@
        " ('United Kingdom', 245.52, 28)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,6 +1287,165 @@
     "       COUNT(invoice_id)\n",
     "FROM invoice\n",
     "GROUP BY 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///chinook.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>num_customers</th>\n",
+       "        <th>country</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Argentina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Australia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Austria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Belgium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>Brazil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Chile</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Czech Republic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Denmark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>Germany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Hungary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>India</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Ireland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Netherlands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Norway</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Poland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Portugal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Spain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Sweden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>13</td>\n",
+       "        <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Argentina'),\n",
+       " (1, 'Australia'),\n",
+       " (1, 'Austria'),\n",
+       " (1, 'Belgium'),\n",
+       " (5, 'Brazil'),\n",
+       " (8, 'Canada'),\n",
+       " (1, 'Chile'),\n",
+       " (2, 'Czech Republic'),\n",
+       " (1, 'Denmark'),\n",
+       " (1, 'Finland'),\n",
+       " (5, 'France'),\n",
+       " (4, 'Germany'),\n",
+       " (1, 'Hungary'),\n",
+       " (2, 'India'),\n",
+       " (1, 'Ireland'),\n",
+       " (1, 'Italy'),\n",
+       " (1, 'Netherlands'),\n",
+       " (1, 'Norway'),\n",
+       " (1, 'Poland'),\n",
+       " (2, 'Portugal'),\n",
+       " (1, 'Spain'),\n",
+       " (1, 'Sweden'),\n",
+       " (13, 'USA'),\n",
+       " (3, 'United Kingdom')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT COUNT(customer_id) num_customers,\n",
+    "       country country\n",
+    "FROM customer\n",
+    "GROUP BY 2;"
    ]
   },
   {
@@ -1193,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
